classDiagram
    class Task {
        +String task_type
        +int duration_minutes
        +int priority
        +String notes
        +bool is_completed
        +complete() void
        +is_high_priority() bool
        +get_summary() String
        +to_dict() dict
    }

    class Pet {
        +String name
        +String breed
        +String size
        +String species
        +int age_years
        +String health_notes
        +get_profile() dict
        +update_health_notes(notes: String) void
    }

    class Owner {
        +String name
        +String email
        +int available_minutes
        +List~Pet~ pets
        +List~String~ preferences
        +add_pet(pet: Pet) void
        +set_available_time(minutes: int) void
        +get_preferences() List~String~
    }

    class Schedule {
        +Owner owner
        +Pet pet
        +List~Task~ tasks
        +add_task(task: Task) void
        +remove_task(task_type: String) int
        +generate_plan() List~Task~
        +get_total_duration() int
        +is_over_budget() bool
        +check_conflicts() List~String~
        +explain_plan() String
        +to_dict() dict
    }

    Schedule "1" --> "1" Owner : belongs to
    Schedule "1" --> "1" Pet : tracks
    Schedule "1" --> "*" Task : contains
    Owner "1" --> "*" Pet : owns
